apps/user/filesync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: filesync
  namespace: filesync
spec:
  rules:
  - host: files.192.168.0.100.nip.io
    http:
      paths:
      - backend:
          service:
            name: filesync
            port:
              name: filestash
        path: /
        pathType: ImplementationSpecific
  - host: sync.192.168.0.100.nip.io
    http:
      paths:
      - backend:
          service:
            name: filesync
            port:
              name: syncthing
        path: /
        pathType: ImplementationSpecific
  - host: sync.k3router.ml
    http:
      paths:
      - backend:
          service:
            name: filesync
            port:
              name: syncthing
        path: /
        pathType: ImplementationSpecific
